<resources>
    <string name="app_name">Shuba Driver</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login">Login</string>
    <string name="title_activity_maps">Map</string>
    <string name="new_driver">New Driver</string>
    <string name="registration_title">New Driver</string>
    <string name="prompt_full_name">Full Name</string>
    <string name="action_register_short">Register</string>
    <string name="prompt_repeat_password">Repeat Password</string>
    <string name="action_register_real">Add New Driver</string>
    <string name="back_to_login_page">Already Registered. Back To Sign In</string>
</resources>
